js/js.translator/testData/incremental/invalidation/updateExports/lib2/l2b.6.kt
fun funA() = listOf(fun4(), fun3()).joinToString()
fun funB() = listOf(fun1(), fun2(), fun4()).joinToString()
